--- a/haskell-experiments-scratch.cabal
+++ b/haskell-experiments-scratch.cabal
@@ -18,6 +18,8 @@ library
   exposed-modules:     Lib
                      , Santa
   build-depends:       base >= 4.7 && < 5
+                     , stm
+                     , random
   default-language:    Haskell2010
 
 executable haskell-experiments-scratch-exe
