--- a/haskell-experiments-scratch.cabal
+++ b/haskell-experiments-scratch.cabal
@@ -16,9 +16,11 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Santa
+                     , StringThing
   build-depends:       base >= 4.7 && < 5
                      , stm
                      , random
+                     , text
   default-language:    Haskell2010
 
 executable haskell-experiments-scratch-exe
