--- a/haskell-experiments-scratch.cabal
+++ b/haskell-experiments-scratch.cabal
@@ -21,6 +21,7 @@ library
                      , stm
                      , random
                      , text
+                     , split
   default-language:    Haskell2010
 
 executable haskell-experiments-scratch-exe
