--- a/haskell-experiments-scratch.cabal
+++ b/haskell-experiments-scratch.cabal
@@ -26,6 +26,7 @@ library
                      , bytestring
                      , base64-bytestring
                      , base16-bytestring
+                     , mtl
   default-language:    Haskell2010
 
 executable haskell-experiments-scratch-exe
