[config] add conduit module

--- a/haskell-experiments-scratch.cabal
+++ b/haskell-experiments-scratch.cabal
@@ -18,6 +18,7 @@ library
   exposed-modules:     Santa
                      , StringThing
                      , Continuation
+                     , Conduit
   build-depends:       base >= 4.7 && < 5
                      , stm
                      , random
