[config] conduit lib dep

--- a/haskell-experiments-scratch.cabal
+++ b/haskell-experiments-scratch.cabal
@@ -28,6 +28,7 @@ library
                      , base64-bytestring
                      , base16-bytestring
                      , mtl
+                     , conduit
   default-language:    Haskell2010
 
 executable haskell-experiments-scratch-exe
