--- a/haskell-experiments-scratch.cabal
+++ b/haskell-experiments-scratch.cabal
@@ -19,6 +19,7 @@ library
                      , StringThing
                      , Continuation
                      , Conduit
+                     , TypeFamily
   build-depends:       base >= 4.7 && < 5
                      , stm
                      , random
